<resources>
    <!-- Default -->
    <string name="app_name">DOG WALK</string>
    <string name="toolbar_back_arrow">Back Arrow</string>
    <string name="edit_text_hint_name">Имя</string>
    <string name="edit_text_hint_surname">Фамилия</string>
    <string name="edit_text_hint_email">Email</string>
    <string name="edit_text_hint_password">Пароль</string>
    <string name="edit_text_hint_mobile_number">Мобильный номер</string>
    <string name="edit_text_hint_home_address">Домашний адресс</string>
    <string name="login_button_title">Войти</string>
    <string name="registration_button_title">Зарегистрироваться</string>
    <string name="default_pet_size_little">Маленькая</string>
    <string name="default_pet_size_middle">Средняя</string>
    <string name="default_pet_size_big">Большая</string>

    <!-- Start Screen -->
    <string name="start_screen_description">Свяжитесь с выгульщиком \n в один клик</string>

    <!-- Registration Screen -->
    <string name="registration_title">Регистрация</string>
    <string name="registration_who_am_i">Кем я являюсь?</string>
    <string name="registration_i_am_owner">Я хозяин животного</string>
    <string name="registration_i_am_walker">Я выгульщик</string>
    <string name="registration_click_to_change">Нажмите, чтобы изменить</string>
    <string name="registration_continue_button">Продолжить</string>
    <string name="registration_error_message">Пожалуйста, заполните поле %s</string>

    <!-- Login Screen -->
    <string name="login_title">Логин</string>

    <!-- Walker Activity -->
    <string name="navigation_bar_walker">Все объявления</string>
    <string name="navigation_bar_my_profile">Мой профиль</string>

    <!-- Announcement Fragment -->
    <string name="all_walker_search_button">Поиск</string>
    <string name="search_field_error_message">Введите значение, чтобы найти обьявление</string>
    <string name="all_walker_filter_button">Фильтр</string>
    <string name="all_walker_edit_text_hint">Введите для поиска</string>
    <string name="all_walker_experience">Опыт : %s</string>
    <string name="all_walker_description">О себе : %s</string>
    <string name="order_pet_name">Кличка животного : %s</string>
    <string name="order_pet_age">Возраст : %s</string>
    <string name="order_pet_size">Размер : %s</string>

    <!-- Profile Fragment -->
    <string name="profile">Профиль</string>
    <string name="profile_add_pet">Добавить новое животное</string>
    <string name="profile_exit">Выйти</string>
    <string name="profile_click_to_edit">Редактировать профиль</string>
    <string name="profile_all_dogs">Собаки</string>
    <string name="profile_experience">Какой у вас опыт?</string>
    <string name="profile_about_me">Информация о себе</string>
    <string name="profile_description">Опишите себя</string>

    <!-- Search Fragment -->
    <string name="search_toolbar_title">Результаты поиска</string>

    <!-- Filter Fragment -->
    <string name="filter_toolbar_title">Фильтр</string>
    <string name="coast_title">Цена</string>
    <string name="dog_size_title">Размер собаки</string>
    <string name="small_size">Маленькая</string>
    <string name="average_size">Средняя</string>
    <string name="biggest_size">Большая</string>
    <string name="filter_button">Отфильтровать</string>

    <!-- Edit Profile -->
    <string name="profile_error_message">Пожалуйста, заполните поле %s</string>
    <string name="edit_profile_title">Редактирование профиля</string>
    <string name="save_button">Сохранить</string>
    <string name="edit_profile_who_am_i">Кем я являюсь?</string>
    <string name="edit_profile_i_am_owner">Я хозяин животного</string>
    <string name="edit_profile_i_am_walker">Я выгульщик</string>
    <string name="edit_profile_click_to_change">Нажмите, чтобы изменить.</string>
    <string name="edit_profile_restart_program">Перезапустите приложение, чтобы изменения вступили в силу.</string>

    <!-- New Pet Fragment -->
    <string name="new_pet_title">Добавление нового питомца</string>
    <string name="new_pet_button">Добавить</string>
    <string name="new_pet_name">Имя</string>
    <string name="new_pet_age">Возраст</string>
    <string name="new_pet_size">Размер вашего питомца</string>
    <string name="new_pet_size_little">Маленькая</string>
    <string name="new_pet_size_middle">Средняя</string>
    <string name="new_pet_size_big">Большая</string>
    <string name="new_pet_description">Описание</string>

    <!-- Edit Pet Fragment -->
    <string name="pet_error_message">Пожалуйста, заполните поле %s</string>
    <string name="edit_pet_title">Редактирование питомца</string>
    <string name="edit_pet_order">Создать/редактировать обьявление</string>
    <string name="edit_pet_subtitle">Завершить редактирование питомца</string>
    <string name="edit_pet_name">Имя</string>
    <string name="edit_pet_age">Возраст</string>
    <string name="edit_pet_size">Размер вашего питомца</string>
    <string name="edit_pet_size_little">Маленькая</string>
    <string name="edit_pet_size_middle">Средняя</string>
    <string name="edit_pet_size_big">Большая</string>
    <string name="edit_pet_description">Описание</string>

    <!-- Order Fragment -->
    <string name="order_save_button">Создать/редактировать объявление</string>
    <string name="order_delete_button">Удалить объявление</string>
    <string name="order_date_hint">Выберите дату</string>
    <string name="order_time_hint">Выберите время</string>
    <string name="order_walker">Объявление было добавлено</string>

    <!-- Order Details Fragment -->
    <string name="order_details_title">Детали заказа</string>
    <string name="order_details_name">Имя выгульщика : %s</string>
    <string name="order_details_mobile_number">Мобильный номер выгульщика : %s</string>
    <string name="order_details_description">Информация о нём : %s</string>
    <string name="order_details_experience">Опыт выгульщика : %s</string>
    <string name="order_details_date">Дата заказа : %s</string>
    <string name="order_details_pet_name">Имя питомца : %s</string>
    <string name="order_details_pet_age">Возраст питомца : %s</string>
    <string name="order_details_pet_description">Описание питомца : %s</string>
    <string name="order_details_pet_size">Размер питомца : %s</string>
    <string name="order_details_owner_name">Имя хозяина : %s</string>
    <string name="order_details_owner_mobile_number">Мобильный номер хозяина : %s</string>

</resources>
